--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     --color-secundaria : #DEEFE7;
     --color-tercearia : #159A9C;
     --color-destaque : #B4BEC9;
+    --color-gostei: #002333;
 }
 
 * {
@@ -36,10 +37,10 @@ body {
 .navbar {
     position: fixed;
     text-align: right;
-    top: 5;
-    
-    width: 100%;
-    padding: 30px;
+    top: 0;
+    right: 0;
+    left: 0;
+    padding: px;
     background-color: var(--background-color);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
@@ -48,7 +49,20 @@ body {
     margin: 0;
     padding: 0;
     float: left;
-    width: 200px;
+    width: 300px;
     height: 100px;
     overflow: hidden;
+}
+
+footer {
+
+bottom: 0;
+position: fixed;
+right: 0;
+left: 0;
+text-align: center;
+color: var(--color-gostei);
+font-size: 1.2em;
+padding: 20px;
+background-color: var(--color-destaque);
 }
