--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,6 @@ body {
     text-decoration: none;
     font-size: 1.5rem;
     font-family: 'Lobster', cursive;
-    margin: 15px;
-    padding: 18px;
     color: var(--color-text);
 }
 
@@ -45,6 +43,11 @@ body {
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
+#navtext {
+    margin-right: 15%;
+    vertical-align: middle;
+}
+
 #logo {
     margin: 0;
     padding: 0;
@@ -52,6 +55,7 @@ body {
     width: 300px;
     height: 100px;
     overflow: hidden;
+    margin-left: 10%;
 }
 
 footer {
