--- a/styles.css
+++ b/styles.css
@@ -78,29 +78,49 @@ position: fixed;
     overflow: hidden;
     /* margin-left: 10%; */
 }
+footer {
+
+    bottom: 0;
+    position: fixed;
+    right: 0;
+    left: 0;
+    text-align: center;
+    color: var(--color-gostei);
+    font-size: 1.2em;
+    padding: 20px;
+    background-color: var(--color-destaque);
+    }
 
 @media ( max-width: 450px) {
     .navbar a {
         font-size: 1rem;
     }
-    #logo {
-        width: 100px;
-        height: 33px;
+        
+    .navbar {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;   
+        height: 80px;
+      
     }
+    .navbar a {
+        text-align: right;
+        right: 0;
+        padding: 10px;
+      }
+        
+    #logo {
+        width: 200px;
+        height: 60px;
+        overflow: hidden;
+    }
+    footer {
+        font-size: 0.7em;
+        padding: 2px;
+        background-color: var(--color-destaque);
+        }
 
 
 
 }
 
-footer {
-
-bottom: 0;
-position: fixed;
-right: 0;
-left: 0;
-text-align: center;
-color: var(--color-gostei);
-font-size: 1.2em;
-padding: 20px;
-background-color: var(--color-destaque);
-}
