--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,24 @@
     margin: 0;
     padding: 0;
 }
+/* p { margin-top: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
+    text-align: justify;
+    font-size: 1.3rem;
+} */
+
 
 body {
     background-color: var(--color-tercearia);
 }
-main {
+.index main {
     display: flex;
     flex-direction: column;
+}
+.about main {
+    display: flex;
+    flex-direction: row;
 }
 
 header {
@@ -80,16 +91,22 @@ position: sticky;
     overflow: hidden;
     /* margin-left: 10%; */
 }
-footer {
+#imgbruno {
+    width: 300px;
+    height: 400px;
 
+}
+footer {
+    display: flex;
     bottom: 0;
-    /* position: fixed; */
+    position: fixed;
     right: 0;
     left: 0;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
     color: var(--color-gostei);
     font-size: 1.2em;
-    padding: 20px;
+    /* padding: 20px; */
     background-color: var(--color-destaque);
     }
 
@@ -142,7 +159,19 @@ footer {
         background-color: var(--color-destaque);
         }
 
-
-
+}
+.apresentacao_about div {
+    /* width: 500px; */
 }
 
+#st_about {
+    width: 600px;
+    height: 200px;
+    text-align: justify;
+}
+
+#about {
+display: flex;
+justify-content: space-around;
+
+}
